# jamal

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
jamal/: __init__.py  analyzer.py  cli.py  collector.py  config.py  extractor.py  models.py  reporter.py
tests/: conftest.py  test_analyzer.py  test_collector.py  test_extractor.py  test_models.py  test_reporter.py
